--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@media screen and (max-width: 768px) {
+    /* Estilos para telas menores, como smartphones */
+  }
+  
+  @media screen and (max-width: 1024px) {
+    /* Estilos para tablets */
+  }
 
 *{
     margin: 0;
